<resources>
    <string name="app_name" translatable="false">>dingbring</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3481097821967676</string>
    <string name="facebook_application_id" translatable="false">3481097821967676</string>

    <string name="_1" translatable="false">1</string>
    <string name="eng" translatable="false">English</string>
    <string name="fra" translatable="false">Français</string>
    <string name="spa" translatable="false">Español</string>
    <string name="pot" translatable="false" >Português</string>
    <string name="home" translatable="false" >Home</string>
    <string name="dingbring_1_0" translatable="false">DingBring 1.0</string>
    <string name="bottom_bar" translatable="false" >Bottom bar</string>
    <string name="top_bar" translatable="false">Top bar</string>
    <string name="back_button" translatable="false">back button</string>
    <string name="photo_profil" translatable="false">photo profil</string>
<string name="historic_symbol" translatable="false">historic symbol</string>
<string name="day" translatable="false">day</string>
<string name="warning" translatable="false">warning</string>
<string name="edit" translatable="false">edit</string>
<string name="minus" translatable="false">minus</string>
<string name="plus" translatable="false">plus</string>
<string name="delete" translatable="false">delete</string>
<string name="cancel" translatable="false">Cancel</string>
<string name="see" translatable="false">see</string>
<string name="send" translatable="false">send</string>
<string name="yes" translatable="false">yes</string>
<string name="no" translatable="false">no</string>
<string name="save" translatable="false">save</string>
<string name="item" translatable="false">item</string>
<string name="info" translatable="false">information</string>
<string name="add" translatable="false">add</string>
    <string name="article"  translatable="false">article</string>



    <string name="english">English</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="deutsch">Deutch</string>
    <string name="chinese">Chinese</string>
    <string name="portuguese">Portuguese</string>
    <string name="arabic">Arabic</string>
    <string name="newbie">Newbie</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="experienced">Experienced</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="calendar">Calendar</string>
    <string name="can_you_bring_it">Can you bring it ?</string>
    <string name="change_language">Change Language :</string>
    <string name="current_language">Current Language :</string>
    <string name="change_your_name">Change your name :</string>
    <string name="change_your_profile_picture">Change your profile picture :</string>
    <string name="quantity">Quantity</string>
    <string name="no_event_yet">No Event yet</string>
    <string name="log_out">Log Out</string>
    <string name="profil">Profil</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="i_bring">I Bring</string>
    <string name="i_need">I need</string>
    <string name="event">Event</string>
    <string name="detail">Detail</string>
    <string name="or">Or</string>



    <string name="description">Description</string>
    <string name="event_name">Event Name</string>
    <string name="organizer">Organizer</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="new_name">New name</string>


</resources>