<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    style="@style/MyDialogTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTransparent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250sp"
        android:layout_height="400sp"
        android:background="@drawable/rectangle_corner_grey_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_01"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_02"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_h_4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/dialog_lang_h_6"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:id="@+id/dialog_lang_h_7"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_lang_v_1"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dialog_lang_v_5"
            app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dialog_lang_v_9"
            app:layout_constraintGuide_percent="0.9"/>


        <TextView
            android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_en"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_1"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_5"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_2"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/TxtViewPrincipalBlack"
            android:background="@color/grey_200"
            android:text="@string/english"
            />
        <TextView
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_fr"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_5"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_9"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_2"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/french"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />
        <TextView
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_pt"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_1"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_5"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_3"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/portuguese"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />
        <TextView
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_sp"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_5"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_9"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_3"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/spanish"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />

        <TextView
            android:visibility="invisible"
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_de"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_1"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_5"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_4"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/deutsch"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />
        <TextView
            android:visibility="invisible"
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_ch"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_5"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_9"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_4"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/chinese"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />
        <TextView
            android:visibility="invisible"
                 android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_it"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_1"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_5"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_6"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/italian"
               android:background="@color/grey_200"
                  style="@style/TxtViewPrincipalBlack"
            />
        <TextView
            android:visibility="invisible"
            android:textSize="12sp"
            android:padding="11dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/setting_ar"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_5"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_9"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_6"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/arabic"
            android:background="@color/grey_200"
            style="@style/TxtViewPrincipalBlack" />


        <TextView
            android:textColor="@color/white"
            android:textSize="16sp"
            style="@style/TxtViewPrincipalBlack"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_02"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"/>

        <TextView
            android:id="@+id/dialog_lang_current_lang"
            android:textSize="16sp"
            style="@style/TxtViewPrincipalWhite"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_01"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_02"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>


        <TextView
            android:textColor="@color/white"
            android:textSize="16sp"
            style="@style/TxtViewPrincipalBlack"
            app:layout_constraintTop_toTopOf="@+id/dialog_lang_h_1"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_lang_h_01"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_language"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/dialog_lang_v_5"
            android:id="@+id/settings_check_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="35dp"
            app:borderWidth="2dp"
            app:maxImageSize="22dp"
            app:srcCompat="@drawable/logo_check"
            app:tint="@android:color/white"
            android:backgroundTint="@color/grey_600"
            app:backgroundTint="@color/yellow_900" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/dialog_lang_v_5"
            android:id="@+id/settings_cancel_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="35dp"
            app:borderWidth="2dp"
            app:maxImageSize="22dp"
            app:srcCompat="@drawable/logo_add"
            android:rotation="45"
            app:tint="@android:color/white"
            android:backgroundTint="@color/grey_600"
            app:backgroundTint="@color/yellow_900" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>